test/simple/typeerrors/Examples/ExprInfixApplication.hs
module ExprInfixApplication where

data A = A Int Int

f = 3 `A` True
